@@ -17,7 +17,7 @@ module ActionView
 
         def asset_tag(source, options)
           # We force the :request protocol here to avoid a double-download bug in IE7 and IE8
-          tag("link", { "rel" => "stylesheet", "type" => Mime::CSS, "media" => "screen", "href" => ERB::Util.html_escape(path_to_asset(source, true, :request)) }.merge(options), false, false)
+          tag("link", { "rel" => "stylesheet", "type" => Mime::CSS, "media" => "screen", "href" => ERB::Util.html_escape(path_to_asset(source, :protocol => :request)) }.merge(options), false, false)
         end
 
         def custom_dir
@@ -61,7 +61,7 @@ module ActionView
         #   stylesheet_path "http://www.example.com/css/style"       # => http://www.example.com/css/style
         #   stylesheet_path "http://www.example.com/css/style.css"   # => http://www.example.com/css/style.css
         def stylesheet_path(source)
-          asset_paths.compute_public_path(source, 'stylesheets', 'css', true, :request)
+          asset_paths.compute_public_path(source, 'stylesheets', :ext => 'css', :protocol => :request)
         end
         alias_method :path_to_stylesheet, :stylesheet_path # aliased to avoid conflicts with a stylesheet_path named route
 
